--- a/LendingClub_CaseStudy.ipynb
+++ b/LendingClub_CaseStudy.ipynb
@@ -107,8 +107,21 @@
     "    - Check for duplicate values using : data.duplicated.sum() / data.duplicated.any(): duplicate values will influence the final result / outcome and will add bias to the data. \n",
     "    - So its very much critical to find duplicates and drop them as required. drop data using : data.drop_duplicates(subset=None, inplace=True)\n",
     "    - **Note**: alternatively find unique values in each column using df.nunique() to count the number of unique values in a given axis and drop the duplicates using df.drop(same_value_cols, axis=1)\n",
-    "    - drop all columns which has not valid values (i.e. all null values) such columns does not add to any value for analysis.      \n",
-    "\n",
+    "    - drop all columns which has not valid values (i.e. all null values) such columns does not add to any value for analysis.\n",
+    "    \n",
+    "3. Data analysis includes:\n",
+    "    - Check for mean, median, mode , and std deviations, which gives us insights into the data and distribution of data.\n",
+    "    - Check for outliers : can be checked using visualization boxplot, the boxplot clearly shows the outliers , whiskers of the box plot indicate the outliers.\n",
+    "    - Based on above analysis, we can have outlier threshold of interquartile ranges q1 as 0.05 and q4 as 0.95 (5% percentile to 95% percentile) and remove the outliers.\n",
+    "    - Outliers can impact analysis as the analysis will be hearvily biased towards outliers, so the outliers needs to be identfied and replaced with threshold values (need to rephrase these)\n",
+    "    \n",
+    "    **NOTE** : check EDA session by Aditya B : on replacing data using threadsholds  time frame for the same in the video : 1:56:13 \n",
+    "    link : [EDA session by Aditya B](https://live.upgrad.com/summary/oa1QB1mFMoFniNGUDjsreNfCZ3NTAse7)\n",
+    "    \n",
+    "    - Correlation function : this is similar to redundant / duplicate data, adds biases to the model and we need to give importance to correlated features and its recommended to drop highly correlated features to avoid biases to the outcome / model.\n",
+    "    - Heat map can help in indentifying highly correlated features.\n",
+    "    \n",
+    "    **TODO** : add more details on data analysis and cleaning and path we want to take for case study.\n",
     "    \n",
     "  "
    ]
@@ -787,28 +800,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mths_since_last_record    36931\n",
-      "mths_since_last_delinq    25682\n",
-      "desc                      12940\n",
-      "emp_title                  2459\n",
-      "emp_length                 1075\n",
-      "pub_rec_bankruptcies        697\n",
-      "last_pymnt_d                 71\n",
-      "revol_util                   50\n",
-      "title                        11\n",
-      "last_credit_pull_d            2\n",
-      "funded_amnt_inv               0\n",
-      "verification_status           0\n",
-      "member_id                     0\n",
-      "url                           0\n",
-      "loan_status                   0\n",
+      "count      111.000000\n",
+      "mean     20390.666667\n",
+      "std      19706.265714\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%      36931.000000\n",
+      "75%      39717.000000\n",
+      "max      39717.000000\n",
+      "dtype: float64\n",
+      "-----------------------------\n",
+      "verification_status_joint    39717\n",
+      "annual_inc_joint             39717\n",
+      "mo_sin_old_rev_tl_op         39717\n",
+      "mo_sin_old_il_acct           39717\n",
+      "bc_util                      39717\n",
+      "bc_open_to_buy               39717\n",
+      "avg_cur_bal                  39717\n",
+      "acc_open_past_24mths         39717\n",
+      "inq_last_12m                 39717\n",
+      "total_cu_tl                  39717\n",
+      "inq_fi                       39717\n",
+      "total_rev_hi_lim             39717\n",
+      "all_util                     39717\n",
+      "max_bal_bc                   39717\n",
+      "open_rv_24m                  39717\n",
       "dtype: int64\n"
      ]
     }
@@ -816,7 +839,9 @@
    "source": [
     "null_rows = df.isnull().sum()\n",
     "\n",
+    "print(null_rows.describe())\n",
     "\n",
+    "print(\"-----------------------------\")\n",
     "sorted_columns = null_rows.sort_values(ascending=False)\n",
     "\n",
     "print(sorted_columns[:15])\n",
