Small changes, to merge back to main

--- a/LendingClub_CaseStudy.ipynb
+++ b/LendingClub_CaseStudy.ipynb
@@ -127,8 +127,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data import and exploration, import loan.csv and dict in different data frames and do initial clean up like stripping space, null/nan values and dropping columns with all nan values "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -335,33 +342,56 @@
        "[87 rows x 8 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# load csv file\n",
     "df = pd.read_csv(\"loan.csv\", low_memory=False)\n",
     "df.columns = df.columns.str.replace(' ', '')\n",
     "\n",
-    "#check describe before clean\n",
-    "df.describe().T\n"
+    "# describe data frame, transpose the same for readability of statistical values\n",
+    "df.describe().T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now read the dict\n",
+    "# Now read the dictionary\n",
     "data_dict = pd.read_excel(\"Data_Dictionary.xlsx\")\n",
+    "\n",
     "data_dict.columns = data_dict.columns.str.replace(' ', '')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(117, 2)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dict.LoanStatNew  = data_dict.LoanStatNew.apply(lambda x : str(x).strip())\n",
+    "data_dict.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +403,7 @@
       "Data columns (total 2 columns):\n",
       " #   Column       Non-Null Count  Dtype \n",
       "---  ------       --------------  ----- \n",
-      " 0   LoanStatNew  115 non-null    object\n",
+      " 0   LoanStatNew  117 non-null    object\n",
       " 1   Description  116 non-null    object\n",
       "dtypes: object(2)\n",
       "memory usage: 2.0+ KB\n"
@@ -386,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -419,10 +449,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LoanStatNew</th>\n",
-       "      <td>115</td>\n",
-       "      <td>115</td>\n",
-       "      <td>acc_now_delinq</td>\n",
-       "      <td>1</td>\n",
+       "      <td>117</td>\n",
+       "      <td>116</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Description</th>\n",
@@ -437,15 +467,15 @@
       ],
       "text/plain": [
        "            count unique                                                top  \\\n",
-       "LoanStatNew   115    115                                     acc_now_delinq   \n",
+       "LoanStatNew   117    116                                                nan   \n",
        "Description   116    116  The number of accounts on which the borrower i...   \n",
        "\n",
        "            freq  \n",
-       "LoanStatNew    1  \n",
+       "LoanStatNew    2  \n",
        "Description    1  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,6 +662,7 @@
     }
    ],
    "source": [
+    "#get sum of null items in columns\n",
     "data_dict.isnull().sum()"
    ]
   },
@@ -1316,6 +1347,13 @@
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Not sure if we can use drop_duplicates, as below, lets discuss"
    ]
   },
   {
