Fix exception for count plot

--- a/LendingClub_CaseStudy.ipynb
+++ b/LendingClub_CaseStudy.ipynb
@@ -2084,7 +2084,8 @@
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from pandas.api.types import is_object_dtype"
    ]
   },
   {
@@ -2148,11 +2149,12 @@
    "outputs": [],
    "source": [
     "def createCountplot(col):\n",
-    "    plt.figure(figsize=(10,5))\n",
-    "    sns.countplot(df[col], order=sorted(df[col].unique()))\n",
-    "    plt.title(\"Countplot for \"+col)\n",
-    "    plt.xticks(rotation=90)\n",
-    "    plt.show()\n"
+    "    if is_object_dtype(df[col]) :\n",
+    "        plt.figure(figsize=(10,5))\n",
+    "        sns.countplot(df[col], order=sorted(df[col].unique()))\n",
+    "        plt.title(\"Countplot for \"+col)\n",
+    "        plt.xticks(rotation=90)\n",
+    "        plt.show()\n"
    ]
   },
   {
