--- a/LendingClub_CaseStudy.ipynb
+++ b/LendingClub_CaseStudy.ipynb
@@ -4155,7 +4155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 742,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4172,6 +4172,12 @@
     "# issue_d_month\n",
     "# addr_state\n",
     "# zip_code\n",
+    "\n",
+    "# TODO Analysis\n",
+    "# pub_rec vs pub_rec_bankruptcies\n",
+    "# pub_rec_bankruptcies vs interest\n",
+    "# pub_rec_bankruptcies vs amount\n",
+    "# pub_rec_bankruptcies vs annual income\n",
     "\n"
    ]
   },
@@ -6347,11 +6353,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### To Drop Cols : after analysis\n",
+    "delinq_2yrs, \n",
+    "total_acc ,\n",
+    "inq_last_6mths"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO check how to build defaulted : check\n",
+    "FICO\n",
+    "Risk_score"
+   ]
   },
   {
    "cell_type": "code",
