renamed function as per pip8 guide lines

--- a/LendingClub_CaseStudy.ipynb
+++ b/LendingClub_CaseStudy.ipynb
@@ -2670,7 +2670,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dropOutliersFromSingleSeries(series):\n",
+    "def drop_outliers_from_series(series):\n",
     "    # calculate the Q1 and Q3\n",
     "    Q1 = series.quantile(0.25)\n",
     "    Q3 = series.quantile(0.75)\n",
@@ -2684,9 +2684,9 @@
     "    \n",
     "    return df_no_outliers\n",
     "        \n",
-    "def dropOutliersFromDataFrame(df):\n",
+    "def drop_outliers_from_dataframe(df):\n",
     "    for column in df.columns:\n",
-    "        df[column] = dropOutliersFromSingleSeries(df[column])\n",
+    "        df[column] = drop_outliers_from_series(df[column])\n",
     "    return df"
    ]
   },
@@ -2696,7 +2696,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def createBoxplotAndDistplot(col, boxplot_orientation=\"v\"):\n",
+    "def create_boxplot_and_distplot(col, boxplot_orientation=\"v\"):\n",
     "    fig, ax = plt.subplots(figsize=(20, 5))\n",
     "    #Box plot\n",
     "    sns.boxplot(df[col], ax=ax, orient=boxplot_orientation)\n",
@@ -2717,7 +2717,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def createCountplot(col):\n",
+    "def create_countplot(col):\n",
     "    if is_object_dtype(df[col]) :\n",
     "        plt.figure(figsize=(10,5))\n",
     "        sns.countplot(df[col], order=sorted(df[col].unique()))\n",
@@ -2804,7 +2804,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('loan_amnt', \"h\")\n"
+    "create_boxplot_and_distplot('loan_amnt', \"h\")\n"
    ]
   },
   {
@@ -2849,7 +2849,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('funded_amnt', \"h\")\n"
+    "create_boxplot_and_distplot('funded_amnt', \"h\")\n"
    ]
   },
   {
@@ -2894,7 +2894,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('funded_amnt_inv')\n"
+    "create_boxplot_and_distplot('funded_amnt_inv')\n"
    ]
   },
   {
@@ -2953,7 +2953,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('annual_inc', 'h') #vertical boxplot does not look good for analysis\n"
+    "create_boxplot_and_distplot('annual_inc', 'h') #vertical boxplot does not look good for analysis\n"
    ]
   },
   {
@@ -2998,7 +2998,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('annual_inc')"
+    "create_boxplot_and_distplot('annual_inc')"
    ]
   },
   {
@@ -3043,7 +3043,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('installment')\n"
+    "create_boxplot_and_distplot('installment')\n"
    ]
   },
   {
@@ -3088,7 +3088,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('int_rate') \n"
+    "create_boxplot_and_distplot('int_rate') \n"
    ]
   },
   {
@@ -3133,7 +3133,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('installment')"
+    "create_boxplot_and_distplot('installment')"
    ]
   },
   {
@@ -3178,7 +3178,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('dti')"
+    "create_boxplot_and_distplot('dti')"
    ]
   },
   {
@@ -3223,8 +3223,8 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('delinq_2yrs')\n",
-    "createCountplot('delinq_2yrs')"
+    "create_boxplot_and_distplot('delinq_2yrs')\n",
+    "create_countplot('delinq_2yrs')"
    ]
   },
   {
@@ -3270,8 +3270,8 @@
    ],
    "source": [
     "\n",
-    "createBoxplotAndDistplot('inq_last_6mths') \n",
-    "createCountplot('inq_last_6mths') "
+    "create_boxplot_and_distplot('inq_last_6mths') \n",
+    "create_countplot('inq_last_6mths') "
    ]
   },
   {
@@ -3316,8 +3316,8 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('open_acc') \n",
-    "createCountplot('open_acc') "
+    "create_boxplot_and_distplot('open_acc') \n",
+    "create_countplot('open_acc') "
    ]
   },
   {
@@ -3381,8 +3381,8 @@
    ],
    "source": [
     "print(df['pub_rec'])\n",
-    "createBoxplotAndDistplot('pub_rec', 'h')\n",
-    "createCountplot('pub_rec')"
+    "create_boxplot_and_distplot('pub_rec', 'h')\n",
+    "create_countplot('pub_rec')"
    ]
   },
   {
@@ -3427,7 +3427,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('revol_bal')"
+    "create_boxplot_and_distplot('revol_bal')"
    ]
   },
   {
@@ -3473,8 +3473,8 @@
    ],
    "source": [
     "# The amount of credit the borrower is using relative to all available revolving credit\n",
-    "createBoxplotAndDistplot('revol_util')\n",
-    "# createCountplot('revol_util')"
+    "create_boxplot_and_distplot('revol_util')\n",
+    "# create_countplot('revol_util')"
    ]
   },
   {
@@ -3519,8 +3519,8 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('total_acc')\n",
-    "# createCountplot('total_acc')"
+    "create_boxplot_and_distplot('total_acc')\n",
+    "# create_countplot('total_acc')"
    ]
   },
   {
@@ -3565,7 +3565,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('out_prncp')"
+    "create_boxplot_and_distplot('out_prncp')"
    ]
   },
   {
@@ -3611,7 +3611,7 @@
    ],
    "source": [
     "\n",
-    "createBoxplotAndDistplot('out_prncp_inv')"
+    "create_boxplot_and_distplot('out_prncp_inv')"
    ]
   },
   {
@@ -3656,7 +3656,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('total_pymnt')"
+    "create_boxplot_and_distplot('total_pymnt')"
    ]
   },
   {
@@ -3701,7 +3701,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('total_pymnt_inv')"
+    "create_boxplot_and_distplot('total_pymnt_inv')"
    ]
   },
   {
@@ -3746,7 +3746,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('total_rec_prncp')"
+    "create_boxplot_and_distplot('total_rec_prncp')"
    ]
   },
   {
@@ -3791,7 +3791,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('total_rec_int')"
+    "create_boxplot_and_distplot('total_rec_int')"
    ]
   },
   {
@@ -3836,7 +3836,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('total_rec_late_fee')"
+    "create_boxplot_and_distplot('total_rec_late_fee')"
    ]
   },
   {
@@ -3881,7 +3881,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('recoveries')"
+    "create_boxplot_and_distplot('recoveries')"
    ]
   },
   {
@@ -3926,7 +3926,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('collection_recovery_fee')"
+    "create_boxplot_and_distplot('collection_recovery_fee')"
    ]
   },
   {
@@ -3971,7 +3971,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('last_pymnt_amnt')"
+    "create_boxplot_and_distplot('last_pymnt_amnt')"
    ]
   },
   {
@@ -4016,7 +4016,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('pub_rec_bankruptcies')\n"
+    "create_boxplot_and_distplot('pub_rec_bankruptcies')\n"
    ]
   },
   {
@@ -4143,7 +4143,7 @@
     }
    ],
    "source": [
-    "createBoxplotAndDistplot('emp_length')"
+    "create_boxplot_and_distplot('emp_length')"
    ]
   },
   {
